--- a/css/styles.css
+++ b/css/styles.css
@@ -1060,7 +1060,7 @@ body ol li a {
     margin:20px;
     border-radius: 40px;
     transition-duration: 0.5s;
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.1)
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.1);
 }
 
 .store-photo2:hover .store-photo-text{
@@ -1295,6 +1295,7 @@ body ol li a {
     background-position: center;
     background-size: cover;
     margin-bottom:10px;
+    border-radius: 20px 20px 0px 0px;
 }
 
 .council-name {
@@ -1312,7 +1313,182 @@ body ol li a {
     display: none;
 }
 
+/* CLUBS */
+.clubs-container {
+    width: 80vw;
+    display: flex;
+    flex-flow: row wrap;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: flex-start;
+    margin-bottom:30px;
+}
 
+.clubs-title {
+    width: 100%;
+    padding-bottom: 20px;
+}
+
+.club-card {
+    width:200px;
+    margin:10px;
+    transition-duration: 250ms;
+}
+
+.club-card:hover .club-name{
+    transition-duration: 250ms;
+    font-size: 25px;
+}
+
+.club-photo {
+    border-radius: 10px;
+    width:100%;
+    height:150px;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.club-name-wrapper {
+    border-radius: 10px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    height:100%;
+    width:100%;
+    background-color: rgba(0,0,0,0.2);
+    cursor: pointer;
+}
+
+.club-name {
+    color:white;
+    position: absolute;
+    font-size: 20px;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    font-weight: 700;
+    transition-duration: 250ms;
+}
+
+.club-content-wrapper {
+    position: fixed;
+    top:0;
+    left: 0;
+    height:100%;
+    width:100%;
+    z-index: 100;
+    display: none;
+    opacity: 0;
+}
+
+.club-content-bg {
+    height:100%;
+    width:100%;
+    background-color: rgba(0,0,0,0.4);
+    position: relative;
+}
+
+.club-content {
+    width:50vw;
+    transform-style: preserve-3d;
+    position: absolute;
+    background-color: white;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    border-radius: 20px;
+    padding:30px;
+}
+
+.club-content-x {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 20px;
+    height: 20px;
+    opacity: 0.5;
+    z-index: 1000;
+    cursor:pointer;
+    border:none;
+    background-color: transparent;
+}
+    
+.club-content-x:hover {
+    opacity: 1;
+}
+    
+.club-content-x:before, .club-content-x:after {
+    position: absolute;
+    left: 5px;
+    content: ' ';
+    height: 20px;
+    width: 3px;
+    border-radius: 2px;
+    background-color: black;
+}
+    
+.club-content-x:before {
+    transform: rotate(45deg);
+}
+    
+.club-content-x:after {
+    transform: rotate(-45deg);
+}  
+
+.club-content-text {
+    text-align: left;
+}
+
+.club-content-photo {
+    width:30vw;
+    margin:10px;
+    float:right;
+    border-radius: 10px;    
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.1);
+}
+
+.club-content-name {
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.club-content-description {
+
+}
+
+.club-content-socials {
+    margin-top:20px;
+}
+
+.club-content-socials-text {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+.club-content-socials-icon {
+    height:40px;
+}
+
+.club-content-socials-icon-wrapper {
+    height:40px;
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+}
+
+.club-content-socials-icons {
+    border-radius:15px;
+    background-color: var(--mainColor);
+    width:200px;
+    height:70px;
+    margin:0 auto;
+    position: relative;
+}
 
 /* RESPONSIVE STUFF */
 @media screen and (max-width: 1200px) {
