--- a/css/styles.css
+++ b/css/styles.css
@@ -1237,13 +1237,14 @@ body ol li a {
 }
 
 .exec-card  {
-    width:250px;
+    width:100%;
     margin:10px;
     padding:20px;
     border-radius: 20px;
     box-shadow:0 0 10px rgba(0,0,0,0.2);
     transition:transform 0.2s;
     cursor: pointer;
+    text-align: left;
 }
 
 .exec-card:hover {
@@ -1252,27 +1253,31 @@ body ol li a {
 }
 
 .exec-photo {
-    width:250px;
-    height:250px;
+    width:200px;
+    height:200px;
     background-position: center;
     background-size: cover;
-    border-radius: 50%;
-    margin-bottom:10px;
+    border-radius: 10px;
+    margin-right:20px;
+    float: left;
+}
+
+.exec-text {
+    padding:10px;
 }
 
 .exec-name {
-    font-size:20px;
-    font-weight: 700;
 }
 
 .exec-position {
-    font-style: italic;
+    font-size:20px;
+    font-weight: 700;
+
 }
 
 .exec-description {
     font-weight:400px;
     font-size: 14px;
-    display: none;
 }
 
 .council-container {
@@ -1463,6 +1468,8 @@ body ol li a {
 .club-content-name {
     font-size: 40px;
     font-weight: 700;
+    margin-bottom: 10px;
+    margin-top:10px;
 }
 
 .club-content-description {
@@ -1515,6 +1522,17 @@ body ol li a {
     margin-right: 5px;
     margin-bottom: 0;
     padding: 0;
+}
+
+
+/* WELLNESS FORCE */
+.wellness-container {
+    width:80vw;
+    margin: 0 auto;
+}
+
+.wellness-social-logo {
+    height:30px;
 }
 
 /* RESPONSIVE STUFF *//* RESPONSIVE STUFF *//* RESPONSIVE STUFF *//* RESPONSIVE STUFF */
@@ -1589,7 +1607,7 @@ body ol li a {
     .club-content::-webkit-scrollbar-track {
         background: none;
     }
-      
+
     .club-content::-webkit-scrollbar-thumb {
         border-radius:20px;
         border: 0.5em solid rgba(0, 0, 0, 0);  /* Transparent border together with `background-clip: padding-box` does the trick */
