Oweek Stuff and countdown

--- a/css/styles.css
+++ b/css/styles.css
@@ -492,6 +492,50 @@ body ol li a {
     box-shadow: inset;
 }
 
+/* OWEEK */
+.oweek-container {
+    margin: 0 auto;
+    width: 80vw;
+}
+
+.oweek-video {
+    width:80vw;
+}
+
+.countdown-container {
+    margin: 50px auto;
+    width: 80vw;
+}
+
+.countdown-container li {
+    display: inline-block;
+    font-size: 1.5em;
+    list-style-type: none;
+}
+
+.countdown-container ul {
+    padding: 0;
+}
+
+.countdown-container li span {
+    width:4rem;
+    display: block;
+    padding:10px;
+    margin-left:5px;
+    margin-right:5px;
+    font-weight: 600;
+    font-size: 3rem;
+    background-color: var(--mainColor);
+    border-radius: 20px;
+    color: white;
+}  
+
+#headline {
+    text-align: center;
+}
+
+
+
 /* UPCOMING EVENTS */
 .upcoming-events {
     margin: 0 auto;
