--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ hmtl {
     margin: 0;
     padding: 0;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -409,7 +410,7 @@ body ol li a {
 }
 
 .slide1 {
-    background-image: url("../img/front1.jpg");
+    background-image: url("../img/front1.png");
     z-index: 1;
 }
 
@@ -472,8 +473,8 @@ body ol li a {
 .cta-button {
     border-radius: 25px;
     padding:10px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 17px;
+    padding-right: 17px;
     height: 50px;
     color:var(--footerColor);
     text-decoration: none;
