--- a/css/styles.css
+++ b/css/styles.css
@@ -1636,6 +1636,67 @@ body ol li a {
     color:white;
 }
 
+/* SUSTAINABILITY */
+.sustainability-container {
+    width:80vw;
+    margin: 0 auto;
+    text-align: left;
+    margin-bottom: 30px;
+}
+
+.sustainability-title {
+}
+
+.sustainability-logo {
+    float:right;
+    width:25vw;
+    margin-left:20px;
+}
+
+.sustainability-photo {
+    margin: 20px 0;
+    width:100%;
+    height:200px;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    transition-duration: 200ms;
+    cursor: pointer;
+}
+
+.sustainability-photo:hover {
+    transform: scale(1.05);
+    transition-duration: 200ms;
+}
+
+.sustainability-subtitle {
+    position:absolute;
+    text-align: center;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color:white;
+    font-weight: 700;
+    font-size: 25px;
+}
+
+.sustainability-fact-container {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.sustainability-fact {
+    color:white;
+    background-color: var(--mainColor);
+    border-radius: 20px;
+    margin: 10px;
+    padding: 15px;
+}
+
+.sustainability-tip {
+    display: none;
+}
+
 
 /* 404 PAGE */
 .construction-container {
